handle connection failure

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -9,8 +9,12 @@ ignoreInternalEntity true
 
 # stat report types
 report.1 BEEntityCache
-report.2 BEAgentEntity
-report.3 RTCTxnManagerReport
+# report.2 BEAgentEntity
+# report.3 RTCTxnManagerReport
+
+# includes only these entity name RegEx patterns, print all if not specified
+include.BEAgentEntity.1 .*Events.*
+include.BEAgentEntity.2 .*Account.*
 
 # JMX connection and unique engine PU name
 engine.jmxhost.1 localhost
@@ -19,6 +23,8 @@ engine.username.1
 engine.password.1
 engine.name.1 fdcache
 
-# includes only these entity name RegEx patterns, print all if not specified
-include.BEAgentEntity.1 .*Events.*
-include.BEAgentEntity.2 .*Account.*
+# more sample JMX connection and unique engine PU name
+# engine.jmxhost.2 localhost
+# engine.jmxport.2 8888
+# engine.name.1 sample_be
+
