add note for overhead of cache MBean

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -8,9 +8,12 @@ reportFolder
 ignoreInternalEntity true
 
 # stat report types
-report.1 BEEntityCache
+# Note: do not use BEEntityCache report in production, 
+# it does full space scan to get space size, and thus huge perfornace overhead
+# report.1 BEEntityCache
+
 # report.2 BEAgentEntity
-# report.3 RTCTxnManagerReport
+report.3 RTCTxnManagerReport
 
 # includes only these entity name RegEx patterns, print all if not specified
 include.BEAgentEntity.1 .*Events.*
